manifests/5-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: vessel-platform
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: example-service
      instance: app
  template:
    metadata:
      name: app
      labels:
        app: example-service
    spec:
      hostname: example-service
      containers:
        - name: example-service
          image: zetmw/example-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - mountPath: /tmpdir/
              name: testdir
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '64Mi'
              cpu: '250m'
          readinessProbe:
            httpGet:
              path: /readiness
              port: 9102
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /liveness
              port: 9102
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 10001
      volumes:
        - name: testdir
          hostPath:
            path: /tmp/
            type: Directory
