manifests/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: vessel-platform
  labels:
    app: example-service
spec:
  type: ClusterIP
  selector:
    app: example-service
    instance: app
  ports:
    - port: 80
      targetPort: 8000
